@@ -218,6 +218,11 @@
   background-position: 7px -17px;
 }
 
+#attachmentmenu li a.renamelink
+{
+  background-position: 6px -69px;
+}
+
 #messagemenu li a.sourcelink
 {
   background-position: 7px -34px;
